# katana

./: README.md  readme.txt
KNI_3.9.1/: ._lib  Doxyfile  Doxyfile.conf.in  KatanaNativeInterface.kdevelop  KatanaNativeInterface.kdevelop.filelist  aclocal.m4  authors.txt  configure.ac  install-sh  install.txt  readme.txt
KNI_3.9.1/KNI.net/: AssemblyInfo.cpp  KNI.net.vcproj
KNI_3.9.1/autom4te.cache/: output.0
KNI_3.9.1/configfiles400/: katana6M90T.cfg
KNI_3.9.1/demo/: Makefile
KNI_3.9.1/demo/burnintest/: kmlExt_motortimeoutlog.cpp
KNI_3.9.1/demo/burnintest_gui/: Makefile  burnintest_gui.pro  moc_BurnInTestWindow.cpp
KNI_3.9.1/demo/csharp/: Form1.Designer.cs  Form1.resx
KNI_3.9.1/demo/interlink/: interlink  main.cpp
KNI_3.9.1/demo/keycontrol/: keycontrol  keycontrol.cpp  keycontrol.vcproj  pthread.files.txt  readme
KNI_3.9.1/demo/perfo/: main.cpp  perfo  perfo.cpp  perfo.vcproj  readme
KNI_3.9.1/demo/positions/: positions  readme
KNI_3.9.1/demo/sensor/: main.cpp  readme  sensor  sensor.vcproj
KNI_3.9.1/demo/socketcommands/: socketcommands  socketcommands.cpp
KNI_3.9.1/demo/socketcontrol/: katana6M90T_W.cfg  socketcontrol  socketcontrol.cpp
KNI_3.9.1/doc/: KNI Manual.odt
KNI_3.9.1/doc/html/: CRC_8h-source.html  CRC_8h.html  KatanaKinematics5M180_8h.html  KatanaKinematics5M180_8h__incl.dot  KatanaKinematics6M180_8h-source.html  KatanaKinematics6M180_8h.html  KatanaKinematics6M180_8h__incl.dot  Timer_8h.html  (+298 more)
KNI_3.9.1/m4/: ac_python_devel.m4
KNI_3.9.1/py/: Base.i  KNI.i  KNIWrapper.py  KatanaServer.py  Makefile  Makefile.py22  Makefile.py23  SHR.i  build_windows_modules.bat  calib.py  linmov.py  prepare.py  sensor.py  setup.py  setup.py.in
(+481 files in other folders)
